Fix obvious text clipping issues with other languages

--- a/styles/config.scss
+++ b/styles/config.scss
@@ -371,7 +371,7 @@ $dropdown-button-color: $font-default-color !default;
 $dropdown-button-color-disabled: $font-disabled-color !default;
 $dropdown-button-text-shadow: $button-text-shadow;
 
-$dropdown-button-padding: 4px 12px !default;
+$dropdown-button-padding: 2px 12px !default;
 $dropdown-button-icon-width: 24px !default;
 
 $dropdown-menu-background: $gray-100 !default;
